acm/np-mgmt-cluster-azure/namespaces/argo-events/github-event-source-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook
  namespace: argo-events
  annotations:
    configsync.gke.io/cluster-name-selector: np-mgmt-cluster-azure
spec:
  ingressClassName: nginx
  rules:
  - host: github-webhooks.coldbrewlabs.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: github-webhook-eventsource-svc
            port:
              number: 12000
